; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/dbus/extr_dbus_new_handlers_p2p.c_wpas_dbus_setter_persistent_group_properties.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/dbus/extr_dbus_new_handlers_p2p.c_wpas_dbus_setter_persistent_group_properties.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_dbus_property_desc = type { i32 }
%struct.network_handler_args = type { i32, %struct.wpa_ssid* }
%struct.wpa_ssid = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wpas_dbus_setter_persistent_group_properties(%struct.wpa_dbus_property_desc* %0, i32* %1, i32* %2, i8* %3) #0 {
  %5 = alloca %struct.wpa_dbus_property_desc*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.network_handler_args*, align 8
  %10 = alloca %struct.wpa_ssid*, align 8
  %11 = alloca i32, align 4
  store %struct.wpa_dbus_property_desc* %0, %struct.wpa_dbus_property_desc** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8* %3, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = bitcast i8* %12 to %struct.network_handler_args*
  store %struct.network_handler_args* %13, %struct.network_handler_args** %9, align 8
  %14 = load %struct.network_handler_args*, %struct.network_handler_args** %9, align 8
  %15 = getelementptr inbounds %struct.network_handler_args, %struct.network_handler_args* %14, i32 0, i32 1
  %16 = load %struct.wpa_ssid*, %struct.wpa_ssid** %15, align 8
  store %struct.wpa_ssid* %16, %struct.wpa_ssid** %10, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @dbus_message_iter_recurse(i32* %17, i32* %11)
  %19 = load %struct.network_handler_args*, %struct.network_handler_args** %9, align 8
  %20 = getelementptr inbounds %struct.network_handler_args, %struct.network_handler_args* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.wpa_ssid*, %struct.wpa_ssid** %10, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @set_network_properties(i32 %21, %struct.wpa_ssid* %22, i32* %11, i32* %23)
  ret i32 %24
}

declare dso_local i32 @dbus_message_iter_recurse(i32*, i32*) #1

declare dso_local i32 @set_network_properties(i32, %struct.wpa_ssid*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
